--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 Maasai: `apertium-mas`
 ===============================================================================
 
-This is an Apertium monolingual language package for Masai. What
+This is an Apertium monolingual language package for Maasai. What
 you can use this language package for:
 
 * Morphological analysis of Maasai
